<?php die(); ?>
Akeeba SocialLogin 3.2.3
================================================================================
~ Login with Microsoft: Support Azure AD app registrations on top of the deprecated Windows Live SDK apps.

Akeeba SocialLogin 3.2.2
================================================================================
# [LOW] PHP notice in the post-installation script (gh-60)
# [LOW] Unnecessarily including mooTools in the frontend (gh-61)

Akeeba SocialLogin 3.2.1
================================================================================
# [HIGH] Login with Apple was broken due to a problem in third party Composer dependencies

Akeeba SocialLogin 3.2.0
================================================================================
+ Now supports Sign In with Apple
~ Better follow branding guidelines for the various third party services
~ The post-installation script was not shipped with the system plugin
# [HIGH] The LinkedIn plugin was not shipped with the package

Akeeba SocialLogin 3.1.1
================================================================================
~ Made JavaScript loading deferred
~ Make the Login with Microsoft button's appearance consistent with the other login buttons
~ Add JS and CSS with media versioning queries
# [LOW] Wrong label in system plugin's options

Akeeba SocialLogin 3.1.0
================================================================================
+ Joomla 4 integration with the new `onUserLoginButtons` event. **DOES NOT WORK IN JOOMLA 4.0 BETA 1 DUE TO A BUG IN JOOMLA ITSELF**.
~ Minimum requirements: Joomla 3.9, PHP 7.1

Akeeba SocialLogin 3.0.2
================================================================================
+ Added back the LinkedIn integration

Akeeba SocialLogin 3.0.1
================================================================================